# force_estimation_IROS

./: .gitignore  README.md  main.py  requirements.txt
FrankaEmikaDynamicModel/: README.md
FrankaEmikaDynamicModel/panda_dyn_model_example/: CMakeLists.txt
FrankaEmikaDynamicModel/panda_dyn_model_example/src/: PandaDynamicModel.cpp  PandaModel.cpp
external_force_computation/: compute_residuals.py  external_force_estimate_comparison.py  external_force_estimation.py  json_helper.py
joint_data_preprocessing/: batch_joint_data_processing.py  main.py  robot_data_processor.py  robot_joint_data.py  robot_joint_manager.py  vectorize_joint_data.py
moveit2_humble_docker/: Dockerfile  build_image.sh  run_moveit2_humble_container.sh
moveit_jacobian_ws/src/external_force_computation/: CMakeLists.txt  package.xml
moveit_jacobian_ws/src/external_force_computation/launch/: jacobian_comp.launch.py
moveit_jacobian_ws/src/external_force_computation/src/: external_force.cpp  get_robot_jacobian.cpp
moveit_jacobian_ws/src/panda_moveit2_config/: CMakeLists.txt  package.xml
moveit_jacobian_ws/src/panda_moveit2_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controller_manager.yaml  moveit_controller_manager_namespaced.yaml  ompl_planning.yaml  servo.yaml
moveit_jacobian_ws/src/panda_moveit2_config/launch/: move_group.launch.py  panda_move_group.launch.py  panda_moveit2.launch.py  panda_ros2_controllers.launch.py
moveit_jacobian_ws/src/panda_moveit2_config/ros2_controllers/: ros2_effort_controller.yaml  (+5 more)
moveit_jacobian_ws/src/panda_urdf/: CMakeLists.txt  package.xml
moveit_jacobian_ws/src/panda_urdf/config/: initial_joint_positions.yaml
moveit_jacobian_ws/src/panda_urdf/description/gazebo/: panda.gazebo.xacro
moveit_jacobian_ws/src/panda_urdf/description/ros2_control/: panda_effort.ros2_control.xacro  panda_position.ros2_control.xacro  panda_position_mimic_joint.ros2_control.xacro
moveit_jacobian_ws/src/panda_urdf/description/urdf/: panda.urdf.xacro  panda_macro.urdf.xacro  transmissions.urdf.xacro
moveit_jacobian_ws/src/panda_urdf/launch/: panda_description.launch.py  panda_view.launch.py  panda_view_rviz.launch.py
moveit_jacobian_ws/src/panda_urdf/panda/: model.sdf  model_2.sdf
moveit_jacobian_ws/src/panda_urdf/rviz/: panda_view.rviz
moveit_jacobian_ws/src/panda_urdf/test/: test_urdf_xacro.py
output_directory_creation/: create_output_dirs.py
(+2 files in other folders)
